--- a/_config.yml
+++ b/_config.yml
@@ -75,3 +75,24 @@ banner:
 #   min_height: null        # Banner minimum height
 #   heading_style: null     # Custom heading style (e.g. "font-weight: bold; text-decoration: underline")
 #   subheading_style: null  # Custom subheading style (e.g. color: gold)
+
+
+
+# If you want more debug log, you can set true
+# debug: false
+
+# If you don't want transparent header, you can set false
+header_transparent: false
+
+# If you want to change the content width, you can set to another value
+# content_width: "920px"
+
+# If you want to generate website sitemap, you can set true
+sitemap: true
+
+if you want to change site language, you can set lang option
+lang: "de"  # default lang is en
+
+night_mode: toggle
+
+
