--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ header_transparent: false
 # If you want to generate website sitemap, you can set true
 sitemap: true
 
-if you want to change site language, you can set lang option
+#if you want to change site language, you can set lang option
 lang: "de"  # default lang is en
 
 night_mode: toggle
